--- a/Tracer.vcxproj
+++ b/Tracer.vcxproj
@@ -141,7 +141,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Film.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SfmlFilm.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Film.h" />
+    <ClInclude Include="RgbaColor.h" />
+    <ClInclude Include="SfmlFilm.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
