--- a/Tracer.vcxproj.filters
+++ b/Tracer.vcxproj.filters
@@ -24,15 +24,18 @@
     <ClCompile Include="SfmlFilm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Spectrum.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Film.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RgbaColor.h">
+    <ClInclude Include="SfmlFilm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SfmlFilm.h">
+    <ClInclude Include="Spectrum.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
