--- a/Tracer.vcxproj
+++ b/Tracer.vcxproj
@@ -142,12 +142,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Film.cpp" />
+    <ClCompile Include="FpsCounter.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SfmlFilm.cpp" />
     <ClCompile Include="Spectrum.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Film.h" />
+    <ClInclude Include="FpsCounter.h" />
     <ClInclude Include="Spectrum.h" />
     <ClInclude Include="SfmlFilm.h" />
   </ItemGroup>
